src/objects/FieloELR__QuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>CorrectAnswers__c</fullName>
        <description>Proxy Field</description>
        <label>Correct Answers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>Proxy Field</description>
        <label>Course</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloELR__IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloELR__IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloELR__Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloELR__ModuleResponse__c</fullName>
        <label>Module Response</label>
        <referenceTo>FieloELR__ModuleResponse__c</referenceTo>
        <relationshipLabel>Questions Reponses</relationshipLabel>
        <relationshipName>QuestionResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloELR__NumberOfAttempt__c</fullName>
        <label>Number of Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloELR__PartialGradeValue__c</fullName>
        <label>Partial Grade Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloELR__Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question</label>
        <referenceTo>FieloELR__Question__c</referenceTo>
        <relationshipLabel>Questions Responses</relationshipLabel>
        <relationshipName>QuestionsResponses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloELR__TextValue__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <description>Proxy Field</description>
        <label>Question Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{00000000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Reponses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloELR__CannotChangeModuleResponse</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( FieloELR__ModuleResponse__c )</errorConditionFormula>
        <errorDisplayField>FieloELR__ModuleResponse__c</errorDisplayField>
        <errorMessage>Cannot change the related Module Response.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloELR__ValidateAttemptNumber</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(FieloELR__NumberOfAttempt__c)),FieloELR__NumberOfAttempt__c &gt; FieloELR__ModuleResponse__r.FieloELR__Module__r.FieloELR__AttemptsAllowedPerQuestion__c)</errorConditionFormula>
        <errorMessage>You have reached the limit of attempts for this question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloELR__ValidateSameModule</fullName>
        <active>true</active>
        <errorConditionFormula>FieloELR__Question__r.FieloELR__Module__c !=  FieloELR__ModuleResponse__r.FieloELR__Module__c</errorConditionFormula>
        <errorMessage>The related question doesn&apos;t belong to this module.</errorMessage>
    </validationRules>
</CustomObject>